# amit

./: CMakeLists.txt  LICENSE  README.md
AMITSegmentation/: CMakeLists.txt  README.md  config.json  config4.json
AMITSegmentation/src/: main_segmentation.cpp  misaxx_convolve.cpp  misaxx_convolve.h  segment_via_GMM.cpp  segment_via_GMM.h  segment_via_canny.cpp  segment_via_canny.h  segment_via_gmmFCs.cpp  segment_via_gmmFCs.h  segment_via_ibp.cpp  segment_via_ibp.h  segment_via_otsu.cpp  segment_via_otsu.h  segment_via_singleCells.cpp  segment_via_singleCells.h
AMITStateClassification/: CMakeLists.txt  README.md  config.json
AMITStateClassification/src/: classification.R  data130819_red.csv  main_state_classification.cpp  ref7.csv  state_classification.cpp  state_classification.h
AMITTracking/: CMakeLists.txt  README.md  config.json  config4alex.json
AMITTracking/src/: ibp_cluster_detection.cpp  ibp_cluster_detection.h  main_tracking.cpp  tracking_region_association.cpp  tracking_region_association.h
AMITutils/: CMakeLists.txt  Calcs.cpp  Calcs.h  CellTrack.cpp  CellTrack.h  CellTrackP.cpp  CellTrackP.h  Classification.cpp  Classification.h  IOputs.cpp  IOputs.h  ImageProcessingToolbox.cpp  ImageProcessingToolbox.h  Outputs.cpp  Outputs.h  Region.cpp  Region.h  RegionP.cpp  RegionP.h  RegionSplitting.cpp  RegionSplitting.h  Segmentation.cpp  Segmentation.h  Tracking.cpp  Tracking.h  visualize.cpp  visualize.h
doc/docker/: Dockerfile  build.sh  rebuild.sh  run.sh
